Solved a number of Java warnings